# rticonnextdds-usecases-automotive

./: README.md
datatypes/: README.md
datatypes/res/types/: CMakeLists.txt
datatypes/res/types/data/: CMakeLists.txt
datatypes/res/types/data/actuation/: Actuation_t.idl  CMakeLists.txt
datatypes/res/types/data/base/: CMakeLists.txt  Entity_t.idl  Variants_t.idl
datatypes/res/types/data/demo/: CMakeLists.txt
datatypes/res/types/data/gateway/: CAN_t.idl  CMakeLists.txt
datatypes/res/types/data/perception/: CMakeLists.txt  Lane_t.idl  Object_t.idl  Polygon_t.idl  Track_t.idl  Trajectory_t.idl
datatypes/res/types/data/physics/: Acceleration_t.idl  CMakeLists.txt  Path_t.idl  Point2D_t.idl  Point3D_t.idl  Pose3D_t.idl  Quaternion_t.idl  Time_t.idl  Vector_t.idl  Velocity_t.idl
datatypes/res/types/data/planning/: Alert_t.idl  CMakeLists.txt  Maps_t.idl
datatypes/res/types/data/sensing/: CMakeLists.txt  Camera_t.idl  Compass_t.idl  Gnss_t.idl  Image_t.idl  Imu_t.idl  Lidar_t.idl  PointCloud_t.idl
datatypes/res/types/data/system/: CMakeLists.txt  InfoTopic_t.idl  StatusTopic_t.idl
examples/: README.md  run-demo.sh
examples/src/egoMotion/: CMakeLists.txt  egoMotion_dp.c  egoMotion_dp.h  egoMotion_main.c
examples/src/localization/: CMakeLists.txt  localization_dp.c  localization_dp.h  localization_main.c
examples/src/perception/: CMakeLists.txt  perception_dp.c  perception_dp.h  perception_main.c
examples/src/sceneEval/: CMakeLists.txt  sceneEval_dp.c  sceneEval_dp.h  sceneEval_main.c
examples/src/stimAndPrint/: CMakeLists.txt  stimAndPrint_dp.c  stimAndPrint_dp.h  stimAndPrint_main.c
