#******************************************************************************
#  (c) 2020 Copyright, Real-Time Innovations, Inc. (RTI) All rights reserved.
#
#   Licensed according to the terms in the LICENSE.md file located at the root
#   of this software repository:
#
#                                LICENSE.md
#
#*****************************************************************************

cmake_minimum_required(VERSION 3.14)

add_subdirectory("base")
add_subdirectory("actuation")
add_subdirectory("demo")
add_subdirectory("gateway")
add_subdirectory("perception")
add_subdirectory("physics")
add_subdirectory("planning")
add_subdirectory("sensing")
add_subdirectory("system")
